# zmk-config

./: .gitignore  Makefile  README.md  keymap_config.yaml  pyproject.toml
config/: combos.dtsi  glove80.keymap  helper.dtsi  hrm.dtsi  west.yml
scripts/: format_layout.py  upload.py
