[tool.poetry]
name = "zmk-config"
version = "0.1.0"
description = ""
authors = ["inoc603 <inoc603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
west = "^1.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
